2008-02-15  Hynek Hanke  <hanke@brailcom.org>

	* configure.in: Revision incremented.

	* src/Makefile.am (EXTRA_DIST): Include python/Makefile.in instead of python/Makefile.

2008-02-11  Hynek Hanke  <hanke@mach>

	* src/modules/Makefile.am: Link with gthread_libs.

	* src/modules/module_main.c (main): Call g_thread_init()

	* src/server/speechd.c (main): Call g_thread_init()
	so that we are sure GLIB is thread safe!!!

	* src/server/parse.c (get_param): Additional assertion.

	* src/server/index_marking.c (insert_index_marks): Assertion
	added.

	* src/server/config.c (AddModule): Copy module name
	before inserting.

	* src/server/Makefile.am (speech_dispatcher_LDADD): Include
	gthread_libs.

2008-02-08  Hynek Hanke  <hanke@mach>

	* src/server/config.c (DOTCONF_CB): Insert copies of module
	name string into hash table and output_modules_list .

2008-02-08  Hynek Hanke  <hanke@brailcom.org>

	* version.sh: 0.6.6
	
	* ANNOUNCE: Version 0.6.6

	* NEWS: Version 0.6.6

	* src/server/output.c: Check for module_name not null.

	* src/tests/connection-recovery.c: New test.

	* src/tests/Makefile.am (bin_PROGRAMS): connection_recovery
	-- new target.

	* src/c/api/libspeechd.h (SPD_FATAL): Flush stdout.

	* src/c/api/libspeechd.c (spd_close): Join th events thread.
	(spd_say): Check reply.
	(spd_say): Set msg_id to -1 on error.
	(spd_execute_command): Logging message.
	(spd_execute_command_wo_mutex): Logging message.
	(spd_execute_command_with_reply): Return -1 on error.
	(spd_send_data): Return NULL on error in spd_send_data_wo_mutex.
	(spd_send_data): Return NULL if connection->stream is NULL.
	(spd_send_data_wo_mutex): Only print out the reply if it is not NULL.
	(spd_events_handler): Formatting.
	(spd_events_handler): Signal reply ready even if socket is broken.
	(xmalloc): Formatting.

2008-02-06  Luke Yelavich <themuso@themuso.com>

	* src/modules/espeak.c: Set max rate to 390.

2008-02-04  Hynek Hanke  <hanke@brailcom.org>
